--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,9 +19,11 @@
     "@tanstack/react-router": "^1.120.3",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "i18next": "^25.2.1",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.3",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
