--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,7 +24,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.18",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
