--- a/Backend/Web/appsettings.json
+++ b/Backend/Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "DataSource=sqlite.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
