--- a/Backend/Service/Service.csproj
+++ b/Backend/Service/Service.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\Response\" />
+    <Folder Include="DTO\Request\" />
+  </ItemGroup>
+
 </Project>
