--- a/Backend/Service/Service.csproj
+++ b/Backend/Service/Service.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTO\Request\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="LinqKit" Version="1.3.8" />
     <PackageReference Include="MediatR" Version="13.0.0" />
   </ItemGroup>
 
