Image Service Implementation and Test

--- a/Backend/Web/appsettings.json
+++ b/Backend/Web/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ImageSettings": {
+    "LocalPath": "../Repository/Images/"
+  }
 }
