SaveAgencyHandler Implement and Test

--- a/Backend/Service/Service.csproj
+++ b/Backend/Service/Service.csproj
@@ -8,14 +8,20 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="AutoMapper.Collection.EntityFrameworkCore" Version="11.0.0" />
     <PackageReference Include="LinqKit" Version="1.3.8" />
     <PackageReference Include="MediatR" Version="13.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.9" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Repository\Repository.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Command\ChangePassword\" />
   </ItemGroup>
 
 </Project>
