Implement Email Service

--- a/Backend/Web/appsettings.json
+++ b/Backend/Web/appsettings.json
@@ -9,6 +9,14 @@
     }
   },
   "AllowedHosts": "*",
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpUserName": "",
+    "SmtpPassword": "",
+    "SmtpServerPort": 587,
+    "EnableSsl": true,
+    "EmailDisplayName": "Agency Application"
+  },
   "ImageSettings": {
     "LocalPath": "../Repository/Images/"
   }
