--- a/Backend/Service/Service.csproj
+++ b/Backend/Service/Service.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper" Version="15.0.1" />
     <PackageReference Include="AutoMapper.Collection.EntityFrameworkCore" Version="11.0.0" />
     <PackageReference Include="LinqKit" Version="1.3.8" />
+    <PackageReference Include="MailKit" Version="4.14.0" />
     <PackageReference Include="MediatR" Version="13.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.9" />
