--- a/Backend/Web/appsettings.json
+++ b/Backend/Web/appsettings.json
@@ -19,5 +19,14 @@
   },
   "ImageSettings": {
     "LocalPath": "../Repository/Images/"
+  },
+  "Jwt": {
+    "Key": "",
+    "Issuer": "",
+    "Audience":  ""
+  },
+  "Auth0": {
+    "Domain": "",
+    "Audience": ""
   }
 }
